syntax = "proto3";

option csharp_namespace = "AElf.Client.Consensus.AEDPoS";

//aedpos_contract
message MinerList {
    repeated bytes pubkeys = 1;
}

message PubkeyList {
    repeated string pubkeys = 1;
}

message MinerListWithRoundNumber {
    MinerList miner_list = 1;
    sint64 round_number = 2;
}

message GetMinerListInput {
    sint64 term_number = 1;
}